Do not enable promoted extensions in WebGL 2.0 https://bugs.webkit.org/show_bug.cgi?id=223348

Patch by Alexey Knyazev <3479527+lexaknyazev@users.noreply.github.com> on 2022-06-07
Reviewed by Kimmo Kinnunen.

* LayoutTests/TestExpectations:
* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::initializeNewContext):
(WebCore::WebGL2RenderingContext::initializeShaderExtensions): Deleted.
* Source/WebCore/html/canvas/WebGL2RenderingContext.h:

Canonical link: https://commits.webkit.org/251358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295342 268f45cc-cd09-0410-ab3c-d52691b4dbfc